sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1f/errors.dfrouter
Error: Attribute 'pos' in definition of detectorDefinition 'MQ11Fs2' is empty.
Error: Process Error
Quitting (on error).
